fixed jquery problem and added gulp to start command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Electron application with bootstrap",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "gulp ; electron ."
   },
   "repository": {
     "type": "git",
