--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "run-sequence": "^1.1.2",
     "traverse": "^0.6.6",
     "wiredep": "^2.2.2"
+  },
+  "dependencies": {
+    "roslib": "^0.18.0"
   }
 }
