--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   },
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "devDependencies": {
-    "electron-prebuilt": "^1.2.0",
     "asset-builder": "^1.1.0",
     "browser-sync": "^2.8.2",
     "del": "^1.2.1",
+    "electron-prebuilt": "^1.2.0",
+    "electron-rebuild": "^1.4.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-changed": "^1.3.0",
@@ -52,6 +53,10 @@
     "wiredep": "^2.2.2"
   },
   "dependencies": {
-    "roslib": "^0.18.0"
+    "child_pty": "^3.0.4",
+    "jquery.terminal": "^0.11.22",
+    "pty.js": "^0.3.1",
+    "roslib": "^0.18.0",
+    "web-terminal": "^0.7.0"
   }
 }
